--- a/.gitignore
+++ b/.gitignore
@@ -425,6 +425,7 @@ test-results/
 # Mac bundle stuff
 *.dmg
 *.app
+!*.App
 
 # content below from: https://github.com/github/gitignore/blob/main/Global/macOS.gitignore
 # General
