Conectando o app mobile com o backend

--- a/src/Mobile/PlanShare.App/PlanShare.App.csproj
+++ b/src/Mobile/PlanShare.App/PlanShare.App.csproj
@@ -77,8 +77,12 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Maui" Version="13.0.0" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0" />
     <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.10" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0"/>
+    <PackageReference Include="Refit" Version="9.0.2" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="9.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -99,5 +103,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>ResourceTexts.resx</DependentUpon>
     </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\PlanShare.Communication\PlanShare.Communication.csproj" />
   </ItemGroup>
 </Project>
