--- a/src/Mobile/PlanShare.App/PlanShare.App.csproj
+++ b/src/Mobile/PlanShare.App/PlanShare.App.csproj
@@ -75,18 +75,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Maui" Version="13.0.0" />
+    <PackageReference Include="CommunityToolkit.Maui" Version="13.0.0"/>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0" />
-    <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0"/>
+    <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.10"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0"/>
-    <PackageReference Include="Refit" Version="9.0.2" />
-    <PackageReference Include="Refit.HttpClientFactory" Version="9.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resources\Raw\"/>
+    <PackageReference Include="Refit" Version="9.0.2"/>
+    <PackageReference Include="Refit.HttpClientFactory" Version="9.0.2"/>
+    <PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -106,6 +103,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\PlanShare.Communication\PlanShare.Communication.csproj" />
+    <ProjectReference Include="..\..\Shared\PlanShare.Communication\PlanShare.Communication.csproj"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="appsettings.json"/>
   </ItemGroup>
 </Project>
